Harden shared fixture boundaries
- Use transport-specific reusable homes for packaged distribution tests
- Rename Proxy shared fixture opt-in to make read-only scope explicit
- Keep shared fixture boundary decisions in test code and verification evidence